feat: add public user page
